--- a/templates/partials/group-sheet-sidebar.hbs
+++ b/templates/partials/group-sheet-sidebar.hbs
@@ -8,10 +8,9 @@
       <i class="fas fa-map-marker-alt toggle-tree-locations {{toggleClassLocations}}" title="{{ccLocalize 'group.toggleLocations'}}" data-action="toggleTreeLocations"></i>
       <i class="fas fa-house toggle-tree-shops {{toggleClassShops}}" title="{{ccLocalize 'group.toggleShops'}}" data-action="toggleTreeShops"></i>
       <i class="fas fa-user toggle-tree-npcs {{toggleClassNPC}}" title="{{ccLocalize 'group.toggleNPCs'}}" data-action="toggleTreeNpcs"></i>
-      <i class="fas fa-boxes toggle-tree-items {{toggleClass}}" title="{{ccLocalize 'group.toggleItems'}}" data-action="toggleTreeItems"></i>
+      <!-- <i class="fas fa-boxes toggle-tree-items {{toggleClass}}" title="{{ccLocalize 'group.toggleItems'}}" data-action="toggleTreeItems"></i> -->
       <i class="fas fa-user-tag toggle-tree-npctags {{toggleClassNPCTags}}" title="{{ccLocalize 'group.toggleNPCTags'}}" data-action="toggleTreeNpcTags"></i>
     {{else}}
-      <div></div>
       <div></div>
       <div></div>
       <div></div>
