--- a/templates/base-sheet.html
+++ b/templates/base-sheet.html
@@ -1,25 +1,21 @@
-<div class="campaign-codex hide-existing-tags  {{sheetType}}-sheet cc-scroll-fix">
-  <div class="sheet-container ">
+<div class="hide-existing-tags {{sheetType}}-sheet cc-scroll-fix {{#if sidebarCollapsed}}sidebar-collapsed{{/if}}">  <div class="sheet-container ">
+
+
     {{!-- Sidebar --}}
-    <aside class="sheet-container sheet-sidebar">
+    <aside class="sheet-container sheet-sidebar sidebar-collapsable">
       {{!-- Header with Image and Title --}}
       <div class="sidebar-header">
         <div class="sheet-image" {{#if (not showImage)}}style="display:none"{{/if}}>
           <img src="{{#if customImage}}{{customImage}}{{/if}}" data-action="showPortraitArtwork" alt="{{document.name}}" onerror="this.src='{{defaultImage}}'"  />
-            {{#if (and isGM userImage)}}
-               <i class="fas fa-times-circle cc-remove-image" data-action="removeImage" title="Remove Image"></i>
-            {{/if}}
         </div>
 
         <h1 class="sheet-title">{{document.name}}</h1>
         <div class="sub-title"><div class="type-wrapper"><i class="{{#if customIcon}}{{customIcon}}{{else}}{{#if tagMode}}{{getAsset 'icon' 'tag'}}{{else}}{{getAsset 'icon' sheetType}}{{/if}}{{/if}}" data-action="editIcon"></i> <div class="sheet-type">{{sheetTypeLabel}}</div></div>{{#if mapMarkerOverride}}<div class="map-marker"><i class="fas fa-map-marker"></i><div class="sheet-marker">{{#if mapMarker}}{{mapMarker}}{{else}}-{{/if}}</div></div>{{/if}}</div>
-        {{#if (and isGM showImage)}}
-          <i class="fas fa-camera image-change-btn" data-action="imageChange"></i>{{/if}} {{!-- Custom header content --}} {{{customHeaderContent}}}
+        {{!-- Custom header content --}} {{{customHeaderContent}}}
       </div>
 
       {{!-- Navigation Tabs with Integrated Statistics --}}
-      <!-- <div class="cc-scroll-group scrollable"> -->
-      <div class="cc-scroll-group scrollable">
+      <div class="cc-scroll-group scrollable cc-base-sidebar">
 
         <nav class="sidebar-tabs">
           {{#each tabs}}
@@ -33,6 +29,8 @@
           {{/each}}
         </nav>
         {{{customFooterContent}}}
+        <div clas="cc-linkwrapper">
+
         {{!-- Tags --}}
         <div class="sidebar-links cc-tags">
             <h3 class="cc-tags">Tags
@@ -42,8 +40,7 @@
         <div class="link-tags">
             {{#each quickTags}}
             <div class="link-card npc-link tag-card" data-action="openNPC" data-uuid="{{uuid}}" title="{{name}}">
-              <span class="link-name">{{name}}</span> {{#if ../isGM}}<i class="fas fa-trash remove-npc" data-action="removeNPC" data-uuid="{{uuid}}"></i>
-              {{/if}}
+              <span class="link-name">{{name}}</span>
             </div>
             {{/each}}{{#if (and isGM showTags)}}
             {{#each existingTags}}
@@ -55,50 +52,6 @@
 
 
         </div>
-
-        {{!-- Widgets --}}
-        <div class="sidebar-links cc-widgets" {{#if (not isGM)}}style="display:none"{{/if}}>
-          <h3 class="cc-widgets">Widgets
-            <i class="fas fa-eye" data-action="toggleWidgets" title="Toggle Available Widgets"></i>
-          </h3>
-          <div class="link-widgets">
-            
-            {{!-- Active Widgets --}}
-            {{#each activewidget}}
-            <div class="link-card widget-card" data-id="{{this.id}}">
-              <span class="link-name">{{widgetName}} {{counter}}</span>
-              {{#if ../isGM}}
-              <i class="fas fa-circle-x" data-action="deactivateWidget" data-id="{{this.id}}"></i>
-              {{/if}}
-            </div>
-            {{/each}}
-
-            {{!-- Hidden Section --}}
-            {{#if showWidgets}}
-
-              {{!-- Inactive Widgets --}}
-              {{#each inactivewidgets}}
-              <div class="link-card widget-card inactive" >
-                <span class="link-name" data-action="activateWidget" data-id="{{this.id}}">{{widgetName}} {{counter}}</span>
-                {{#if ../isGM}}
-                  <i class="fas fa-trash" data-action="deleteWidget" data-id="{{this.id}}" data-type="{{this.widgetName}}"></i>
-                {{/if}}
-              </div>
-              {{/each}}
-
-              {{!-- Available Widgets to Add --}}
-              {{#if isGM}}
-              {{#each availableWidgets}}
-              <div class="link-card widget-card available" >
-                <i class="fas fa-circle-plus"></i><span class="link-name" data-action="addWidget" data-name="{{this.name}}" title="Add {{this.name}}">{{this.name}}</span>
-              </div>
-              {{/each}}
-              {{/if}}
-            {{/if}}
-          </div>
-        </div>
-
-
 
         {{!-- Quick Links --}} {{#if quickLinks}}
         <div class="sidebar-links cc-quicklinks">
@@ -118,16 +71,35 @@
         </div>
         {{/if}}
       </div>
+    </div>
       {{#if isGM}}
          <i class="fas fa-cog cc-customise-tabs" title="Customise Tabs" data-action="editTabs"></i>
       {{/if}}
     </aside>
+    {{!-- Sidebar --}}
+    <aside class="sheet-mini-sidebar">
+            <nav class="base-tabs">
+          {{#each tabs}}
+              <i class="{{icon}} group-tab vertical {{#if active}}active{{/if}}" data-tab="{{key}}" data-action="ccChangeTab" title="{{label}}"></i>
+          {{/each}}
+          {{#if isGM}}
+             <i class="fas fa-cog group-tab vertical" title="Customise Tabs" data-action="editTabs"></i>
+          {{/if}}
+        </nav>
+
+
+    </aside>
+    {{!-- Collapser --}}
+<div class="sidebar-collapser" data-action="toggleSidebar">
+   <i class="fas fa-caret-{{#if sidebarCollapsed}}right{{else}}left{{/if}}" inert></i>
+</div>
+
 
     {{!-- Main Content --}}
     <main class="sheet-main">
       <form class="sheet-form">
         {{!-- Tab Panels --}} {{#each tabs}}
-        <section class="tab-panel {{key}} {{#if active}}active{{/if}}" data-tab="{{key}}" {{#if (eq key 'widgets')}}data-preserve-scroll{{/if}}{{#if (eq key 'inventory')}}data-preserve-scroll{{/if}}>{{{content}}}</section>
+        <section class="tab-panel {{key}} {{#if active}}active{{/if}}" data-tab="{{key}}" {{#if (eq key 'widgets')}}data-preserve-scroll{{/if}}{{#if (eq key 'info')}}data-preserve-scroll{{/if}}{{#if (eq key 'inventory')}}data-preserve-scroll{{/if}}>{{{content}}}</section>
         {{/each}}
       </form>
     </main>
