--- a/templates/color-theme-config.hbs
+++ b/templates/color-theme-config.hbs
@@ -1,4 +1,6 @@
 <div class="form-body scrollable" >
+    <input type="file" id="wgtgm-import-file" accept=".json" style="display:none;" />
+
     <p class="notes">Configure the theme colors for the Campaign Codex UI. Changes will be applied after saving.</p>
 
     {{#each fieldsets as |fieldset|}}
