--- a/templates/partials/group-widgets.hbs
+++ b/templates/partials/group-widgets.hbs
@@ -1,41 +1,52 @@
 <div class="content-header">
-    <h2><i class="fas fa-puzzle-piece"></i> Widgets</h2>
+    <h2><i class="fas fa-puzzle-piece"></i> {{ccLocalize "names.widgets"}}</h2>
+    {{#if isGM}}
+    <div class="header-actions">
+            <i class="fas fa-wrench widget-tray-toggle" data-action="toggleWidgetTray"></i> 
+    </div>
+    {{/if}}
 </div>
-
-<div class="group-links cc-widgets group-widgets">
-        
-{{#each activewidget}}
-    <div class="group-card widget-card active" data-id="{{this.id}}">
-        <span class="link-name">{{widgetName}} {{counter}}</span> 
-        {{#if ../isGM}}
-            <i class="fas fa-circle-x" data-action="deactivateWidget" data-id="{{this.id}}"></i>
-        {{/if}}
-    </div>
-{{/each}}
-
-
-{{!-- Inactive Widgets --}}
-{{#each inactivewidgets}}
-    <div class="group-card widget-card inactive" >
-        <span class="link-name" data-action="activateWidget" data-id="{{this.id}}">{{widgetName}} {{counter}}</span> 
-        {{#if ../isGM}}
-            <i class="fas fa-trash" data-action="deleteWidget" data-id="{{this.id}}" data-type="{{this.widgetName}}"></i>
-        {{/if}}
-    </div>
-{{/each}}
-
-{{!-- Available Widgets to Add --}}
 {{#if isGM}}
-    {{#each availableWidgets}}
-        <div class="group-card widget-card available" >
-            <i class="fas fa-circle-plus"></i> <span class="link-name" data-action="addWidget" data-name="{{this.name}}" title="Add {{this.name}}">{{this.name}}</span>
+<div class="widget-tray {{#unless isWidgetTrayOpen}}collapsed{{/unless}}">
+    <div class="tray-inner">
+        <div class="tray-section">
+            <div class="active-widgets-bar">
+                {{#if activewidget.length}}
+                    {{#each activewidget}}
+                        <div class="widget-tag active">
+                         <span class="name">{{this.widgetName}} {{counter}}</span>
+                             <i class="fas fa-circle-x action-icon" data-action="deactivateWidget" data-id="{{this.id}}" title="{{localize 'button.deactivate'}}"></i>
+                        </div>
+                    {{/each}}
+                {{/if}}
+                {{#if inactivewidgets.length}}
+                    {{#each inactivewidgets}}
+                        <div class="tray-card inactive" >
+                          <span class="name" data-action="activateWidget" data-id="{{this.id}}">{{widgetName}} {{counter}}</span>
+                              <div class="tray-actions">
+                                <i class="fas fa-trash action-icon delete" data-action="deleteWidget" data-id="{{this.id}}" data-type="{{this.widgetName}}"></i>
+                              </div>
+                        </div>
+                    {{/each}}
+                {{/if}}
+            </div>
         </div>
-    {{/each}}
+    </div>
+    {{!-- Section: Available Widgets --}}
+    <div class="tray-section">
+    <h3>{{ccLocalize "widgets.available"}}</h3>
+        <div class="tray-grid">
+            {{#each availableWidgets}}
+                <div class="tray-card available">
+                    <span class="name" data-action="addWidget" data-name="{{this.name}}">{{this.name}}</span>
+                </div>
+            {{/each}}
+        </div>
+    </div>
+</div>
 {{/if}}
 
-</div>
-
-<article class="cc-widgets">
-    {{{this.widgetsToRender}}}
-</article>
-
+    {{!-- Rendered Content --}}
+    <article class="cc-widgets-render">
+        {{{this.widgetsToRender}}}
+    </article>
